[package]
name = "serialization-benchmark"
version = "0.1.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.3.1"
algebra_new = { package = "algebra", git = "https://github.com/scipr-lab/zexe", version = "0.1.0", features = ["parallel", "full"] }
algebra_ours = { package = "algebra", git = "https://github.com/gakonst/zexe", version = "0.1.0", features = ["parallel", "full"], branch = "serde-uncompressed" }
rand = "0.7.3"

[[bench]]
name = "io"
harness = false
